changes are ready to be made.

--- a/app/static/css/forms.css
+++ b/app/static/css/forms.css
@@ -26,6 +26,14 @@ form label {
   display:block;
 }
 
+form .help-text{
+  font-size: 9px;
+  font-style: italic;
+  letter-spacing: 0.5px;
+  padding-bottom: 10px;
+  padding-right: 20px;
+}
+
 /* All the labels */
 form input,textarea {
   width: 90%;
