--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -25,9 +25,12 @@
       <div class="form-container column tall-container" style="flex: 1; padding-left:25px;">
         <form method="POST" action="">
               {{ form.csrf_token }}
-              <div>{{ form.person_id.label }} {{ form.person_id(size=10) }}</div>
-              <div>{{ form.gender_identity.label }} {{ form.gender_identity(size=10) }}</div>
+              <div>{{ form.person_id.label }}
+                <div class="help-text">We have a feature in development where you'll click a person's row and their ID will populate below...
+                </div>{{ form.person_id(size=10) }}</div>
+              <div>{{ form.date_of_birth.label }} {{ form.date_of_birth(size=10) }}</div>
               <div>{{ form.racial_identities.label }} {{ form.racial_identities(size=10) }}</div>
+              <div>{{ form.gender_identity.label }} {{ form.gender_identity(size=10) }}</div>
               <input type="submit" value="Submit"/>
           </form>
 
