added citation option. ALso cleaned up the sql error.

--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -31,6 +31,7 @@
               <div>{{ form.date_of_birth.label }} {{ form.date_of_birth(size=10) }}</div>
               <div>{{ form.racial_identities.label }} {{ form.racial_identities(size=10) }}</div>
               <div>{{ form.gender_identity.label }} {{ form.gender_identity(size=10) }}</div>
+              <div>{{ form.edit_citation.label }} {{ form.edit_citation(size=10) }}</div>
               <input type="submit" value="Submit"/>
           </form>
 
