--- a/app/static/css/dynamic-layouts.css
+++ b/app/static/css/dynamic-layouts.css
@@ -3,10 +3,22 @@
 
 
 .flex-columns{
-  background: rgb(0, 0, 0, 0.5);
+  /* background: rgb(0, 0, 0, 0.5); */
   display:flex;
   justify-content: flex-start;
   flex-flow: row wrap;
+  padding: 10px;
+}
+
+.flex-columns h2{
+  margin: 0;
+}
+
+.flex-columns .help-text{
+  color:rgb(0, 0, 0, 0.75);
+  font-size: 10px;
+  letter-spacing: 0.75px;
+  padding-bottom: 20px;
 }
 
 .flex-columns .column{
@@ -27,7 +39,7 @@
     justify-content: center;
   }
   .flex-columns .column{
-    flex-direction: row;
+    max-width: 95vw;
   }
   .tall-container{
     height:500px !important;
