updated helper text #55

--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-  <script type=text/javascript src="{{url_for('static', filename='js/contribute-page.js') }}"> </script>  
+  <script type=text/javascript src="{{url_for('static', filename='js/contribute-page.js') }}"> </script>
 
   <h1>{{ title }}</h1>
   <p>
@@ -34,7 +34,7 @@
         <form method="POST" action="">
               {{ form.csrf_token }}
               <div>{{ form.person_id.label }}
-                <div class="help-text">We have a feature in development where you'll click a person's row and their ID will populate below...</div> {{ form.person_id(size=10) }}</div>
+                <div class="help-text">Click on a person's row and their data will populate below...</div> {{ form.person_id(size=10) }}</div>
               <div>{{ form.date_of_birth.label }} {{ form.date_of_birth(size=10) }}</div>
               <div>{{ form.racial_identities.label }} {{ form.racial_identities(size=10) }}</div>
               <div>{{ form.gender_identity.label }} {{ form.gender_identity(size=10) }}</div>
