--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-  <script type=text/javascript src="{{url_for('static', filename='js/contribute-page.js') }}"> </script>
 
   <h1>{{ title }}</h1>
+  <script type=text/javascript src="{{url_for('static', filename='js/contribute-page.js') }}"> </script>
   <p>
     Because there are over 100,000 people in our database (some of which may be repeats),
     we've opted to limit our scope by first focusing on <b>directors only</b>.
@@ -38,7 +38,10 @@
               <div>{{ form.date_of_birth.label }} {{ form.date_of_birth(size=10) }}</div>
               <div>{{ form.racial_identities.label }} {{ form.racial_identities(size=10) }}</div>
               <div>{{ form.gender_identity.label }} {{ form.gender_identity(size=10) }}</div>
+              <div>{{ form.edit_comment.label }}<div class="help-text"><b>Optional.</b> Leave a comment if you feel is neccessary.</div>{{ form.edit_comment(size=10) }}</div>
               <div>{{ form.edit_citation.label }}<div class="help-text">Optional. Also, Citation is only saved for racial identity edits (at present).</div>{{ form.edit_citation(size=10) }}</div>
+
+
               <input type="submit" value="Submit"/>
           </form>
 
