--- a/app/templates/people/contribute.html
+++ b/app/templates/people/contribute.html
@@ -36,7 +36,7 @@
               <div>{{ form.person_id.label }}
                 <div class="help-text">Click on a person's row and their data will populate below...</div> {{ form.person_id(size=10) }}</div>
               <div>{{ form.date_of_birth.label }} {{ form.date_of_birth(size=10) }}</div>
-              <div>{{ form.racial_identities.label }} {{ form.racial_identities(size=10) }}</div>
+              <div>{{ form.racial_identity.label }} {{ form.racial_identity(size=10) }}</div>
               <div>{{ form.gender_identity.label }} {{ form.gender_identity(size=10) }}</div>
               <div>{{ form.edit_comment.label }}<div class="help-text"><b>Optional.</b> Leave a comment if you feel is neccessary.</div>{{ form.edit_comment(size=10) }}</div>
               <div>{{ form.edit_citation.label }}<div class="help-text">Optional. Also, Citation is only saved for racial identity edits (at present).</div>{{ form.edit_citation(size=10) }}</div>
