added CSS for checkboxes #86

--- a/app/static/css/forms.css
+++ b/app/static/css/forms.css
@@ -51,6 +51,11 @@ form input,textarea {
   background-color: #f8f8f8;
 
 }
+/* CSS for checkboxes */
+input[type=checkbox]{
+  padding: 5px;
+  margin: 5px;
+}
 
 form textarea{
   height:100px;
