in middle of making changes to the general query form. #87

--- a/app/templates/analyze/get-data.html
+++ b/app/templates/analyze/get-data.html
@@ -6,17 +6,42 @@
     Select which paramaters you want included from below:
   </p>
 
-  <!-- Create a form -->
-  <form method="POST">
-    {{ form.csrf_token }}
-    {{ form.hidden_tag() }}
 
-    <div class="form-group all-fields">
+  <div class="data-query">
+    <h2>Query Shows</h2>
+      <form method="POST" action="">
+            {{ form.csrf_token }}
+            <h3>Show Info</h3>
+            <div>{{ form.shows_title.label }} {{ form.shows_title() }}</div>
 
-    {{ form.allFields() }}
-    {{ form.submit() }}
+            <h3>Show Genre</h3>
+            <div>{{ form.musicals.label }} {{ form.musicals() }}</div>
+            <div>{{ form.plays.label }} {{ form.plays() }}</div>
+            <div>{{ form.other_show_genre.label }} {{ form.other_show_genre() }}</div>
 
-    </div>
+            <h3>Production Type</h3>
+            <div>{{ form.originals.label }} {{ form.originals() }}</div>
+            <div>{{ form.revivals.label }} {{ form.revivals() }}</div>
+            <div>{{ form.other_production_type.label }} {{ form.other_production_type() }}</div>
+
+            <input type="submit" value="Submit"/>
+        </form>
+  </div>
 
   </form>
 {% endblock %}
+
+
+<!-- <div>{{ form.person_m_name.label }} {{ form.person_m_name(size=10) }}</div>
+<div>{{ form.person_l_name.label }} {{ form.person_l_name(size=10) }}</div>
+<div>{{ form.role_name.label }} {{ form.role_name(size=10) }}</div>
+<div>{{ form.shows_title.label }} {{ form.shows_title(size=10) }}</div>
+<div>{{ form.shows_year.label }} {{ form.shows_year(size=10) }}</div> -->
+
+<!-- <div class="advanced" id="advanced-data-query">
+  <div class="advanced-label" id="advanced-data-query-label">Advanced Options  <i class="fas fa-wrench"></i></div>
+      <div id="advanced-data-query-content" style="display:none;">
+        <div>{{ form.shows_year_from.label }} {{ form.shows_year_from(size=10) }}</div>
+        <div>{{ form.shows_year_to.label }} {{ form.shows_year_to(size=10) }}</div>
+    </div>
+</div> -->
