some slight changes. #89

--- a/app/templates/admin/approve-users.html
+++ b/app/templates/admin/approve-users.html
@@ -2,6 +2,7 @@
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
 
+    <script type=text/javascript src="{{url_for('static', filename='js/admin-page.js') }}"></script>
     <h3>Admin Tools</h3>
       <a href="#" onClick="history.go(-1)">Back</a>
 
