--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/tables.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/widgets.css') }}">
-
-
     <!-- Load JQuery -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{
@@ -20,6 +18,7 @@
     <script type=text/javascript src="{{url_for('static', filename='js/widgets.js') }}"></script>
 
     <!-- <script type=text/javascript src="{{url_for('static', filename='js/tables.js') }}"></script> -->
+    {% block javascript %}{% endblock %}
 
     <title>{% block title %}{% endblock %} - Open Broadway Data</title>
     {% endblock %}
