--- a/app/templates/analyze/get-data.html
+++ b/app/templates/analyze/get-data.html
@@ -32,14 +32,14 @@
               {% endfor %}
             </div>
 
-            <div class="theatre">
+            <!-- <div class="theatre">
               <h3>Theatre Info</h3>
               {% for field in form %}
-                {% if field.name.startswith('theatre_info') %}
+                {% if field.name.startswith('theatre_info') and not field.name.endswith('_include') %}
                   <div>{{ field.label }} {{ field() }}</div>
                 {% endif %}
               {% endfor %}
-            </div>
+            </div> -->
 
             <div class="date_range">
               <h3>Date Range</h3>
@@ -57,6 +57,16 @@
             <div class="advanced" id="advanced-data-query">
               <div class="advanced-label" id="advanced-data-query-label">Advanced Options  <i class="fas fa-wrench"></i></div>
                   <div id="advanced-data-query-content" style="display:none;">
+
+                    <div class="EXTRA">
+                      <h3>Extra Info</h3>
+                      {% for field in form %}
+                        {% if field.name.endswith('_include') %}
+                          <div>{{ field.label }} {{ field() }}</div>
+                        {% endif %}
+                      {% endfor %}
+                    </div>
+
                     <div class="ADVANCED">
                       <h3>Advanced</h3>
                       {% for field in form %}
@@ -64,6 +74,7 @@
                           <div>{{ field.label }} {{ field() }}</div>
                         {% endif %}
                       {% endfor %}
+
                     </div>
                 </div>
             </div>
